<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#d5d5d5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#232323">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/img_champion_counters"
                android:background="#232323" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_champion_name_actcounters"
                android:id="@+id/tv_champion_name_actcounters"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/img_champion_counters"
                android:layout_toEndOf="@+id/img_champion_counters"
                android:textColor="#d5d5d5"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginTop="-5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_champion_winrate_fragbanrates"
                android:id="@+id/tv_champion_winrate_actcounters"
                android:textColor="#009e6f"
                android:textSize="24dp"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_marginRight="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_winrate_fragbanrates"
                android:id="@+id/tv_winrate_actcounters"
                android:textColor="#b7b7b7"
                android:textSize="12dp"
                android:textStyle="italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="37dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_champion_statscore_actcounters"
                android:id="@+id/tv_champion_statscore_actcounters"
                android:textColor="#009e6f"
                android:textSize="24dp"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_marginRight="180dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_statscore_actcounters"
                android:id="@+id/tv_statscore_actcounters"
                android:textColor="#b7b7b7"
                android:textSize="12dp"
                android:textStyle="italic"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="37dp"
                android:layout_marginRight="125dp" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>